test/conformance/chainsaw/mutate/refactor/nested-foreach/remove-all-env-vars/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox-1
    image: busybox:1.35
  - name: busybox-2
    image: busybox:1.35
