test/conformance/chainsaw/mutate/refactor/nested-foreach/remove-all-env-vars/pod-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: busybox-1
    image: busybox:1.35
    (env != null): true
  - name: busybox-2
    image: busybox:1.35
    (env != null): true
