test/conformance/chainsaw/mutate/refactor/nested-foreach/remove-all-env-vars/02-pod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pod
spec:
  timeouts: {}
  try:
  - apply:
      file: pod.yaml
  - assert:
      file: pod-assert.yaml
  - error:
      file: pod-error.yaml
